--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html{
 
 body{
     padding: 20px;
+    background:  hsl(204, 43%, 93%);
+    margin: auto;
 }
 
 h2, h4, p{
@@ -28,6 +30,7 @@ h2, h4, p{
     width: 100%;
     height: 45%;
     padding: 25px;
+    background-color:white;
 }
 
 #bottom-section{
@@ -67,6 +70,7 @@ h2, h4, p{
 
 #top-section p{
     color : hsl(218, 22%, 67%);
+    padding: 1px;
 }
 
 #bottom-left-section h4{
@@ -141,4 +145,26 @@ button:hover{
 
 footer{
     padding-top: 20px;
+}
+
+@media (max-width: 650px) {
+    
+    #bottom-left-section, #bottom-right-section, #card{
+        height: auto;
+        width: 100%;
+    }
+
+    button{
+        height: 6vh;
+    }
+
+    #top-section h4{
+        color : hsl(71, 73%, 54%);
+        margin-bottom: 10px;
+        margin-right: 10px;
+    }
+
+    #top-section p{
+        display: inline;
+    }
 }
